2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/rules: Adjusting the rules for new autogen and package name. 

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* README:
	* configure.ac:
	* debian/changelog:
	* debian/control:
	* pkgconfig/Makefile.am:
	* pkgconfig/maemo-theme-tools.pc.in:
	* scripts/Makefile.am:
	* scripts/maemo-theme-install:
	* src/Makefile.am: maemo-theme-tools => hildon-theme-tools.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* NEWS: Adding some news. 

	* scripts/maemo-theme-install: Correcting the cache-generation
	routine.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/outliner.c:
	* src/regenerator.c: Fixing some compilation warnings.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* autogen.sh:
	* configure.ac: Adding a more recent/sane autogen.sh.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* configure.ac:
	* maemo-theme-tools.pc.in:
	* pkgconfig:
	* pkgconfig/Makefile.am:
	* scripts/Makefile.am: Moving the pkg-config stuff into a separate
	directory.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* configure.ac:
	* maemo-theme-install:
	* scripts:
	* scripts/Makefile.am: Moving the scrips into separate dir.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/cacher.c:
	* src/colourizer.c:
	* src/colourizer.h:
	* src/common.c:
	* src/common.h:
	* src/outliner.c:
	* src/outliner.h:
	* src/regenerator.c:
	* src/regenerator.h:
	* src/slicer.c:
	* src/slicer.h: Unifying the licenses, codeing style, etc.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/Makefile.am:
	* src/cache-generator.c: Unifying the file naming.

2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Housekeeping, reorganizing dirs.
