@@ -1,3 +1,7 @@
+2006-11-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* debian/rules: One more tiny rules fix.
+
 2006-11-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* debian/rules: Adjusting the rules for new autogen and package name. 
